--- a/partisan_map_test.ipynb
+++ b/partisan_map_test.ipynb
@@ -1277,6 +1277,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "source": [
+    "from shapely import affinity\n",
+    "from shapely.geometry import mapping, shape\n",
+    "\n",
+    "def get_geojson():\n",
+    "    '''\n",
+    "    Returns\n",
+    "    -------\n",
+    "    str - geojson with Alaska and Hawaii translated to fit in extent of Continental US.\n",
+    "    states geojson available at: \n",
+    "    http://s3.amazonaws.com/bokeh_data/us_states_simplified_albers.geojson\n",
+    "    '''\n",
+    "    with open('us_states_simplified_albers.geojson') as us_states_file:\n",
+    "        geojson = json.loads(us_states_file.read())\n",
+    "        for f in geojson['features']:\n",
+    "            if f['properties']['NAME'] == 'Alaska':\n",
+    "                geom = affinity.translate(shape(f['geometry']), xoff=1.2e6, yoff=-4.8e6)\n",
+    "                geom = affinity.scale(geom, .4, .4)\n",
+    "                geom = affinity.rotate(geom, 30)\n",
+    "                f['geometry'] = mapping(geom)\n",
+    "            elif f['properties']['NAME'] == 'Hawaii':\n",
+    "                geom = affinity.translate(shape(f['geometry']), xoff=4.6e6, yoff=-1.1e6)\n",
+    "                geom = affinity.rotate(geom, 30)\n",
+    "                f['geometry'] = mapping(geom)\n",
+    "    return json.dumps(geojson)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 89,
    "source": [
     "county_files[county_files['GEOID'] == \"01003\"]"
